welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:41: error: Unit does not take parameters
motif()
     ^